Fix multiline overflow

--- a/webapp/static/css/clipboard.css
+++ b/webapp/static/css/clipboard.css
@@ -19,7 +19,6 @@ button {
 .flair {
   font-size: 10px;
   vertical-align: middle;
-  margin-right: 10px;
   margin-top: 3px;
   border-radius: 2px;
 }
